# git-task

./: 1  3  4  6  7  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
resources/github/: delete_issue.graphql
src/: github.rs  lib.rs  main.rs  operations.rs  property.rs  status.rs  util.rs
src/connectors/: github.rs  gitlab.rs  jira.rs  mod.rs  redmine.rs
src/operations/: comment.rs  config.rs  label.rs  subtask.rs
src/operations/config/: properties.rs  status.rs
