[package]
name = "git-task"
version = "0.1.2"
authors = ["jhspetersson <jhspetersson@gmail.com>"]
description = "Local-first task manager/bug tracker within your git repository which can sync issues with remote sources."
keywords = ["git", "task", "manager", "bug", "tracker"]
categories = ["command-line-utilities", "command-line-interface"]
documentation = "https://github.com/jhspetersson/git-task/blob/master/README.md"
homepage = "https://github.com/jhspetersson/git-task"
repository = "https://github.com/jhspetersson/git-task"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "gittask"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
enable-ansi-support = "0.2.1"
futures-util = "0.3"
git2 = "0.19.0"
gitlab = { git = "https://gitlab.kitware.com/utils/rust-gitlab.git" }
graphql_client = { version = "0.14", features = ["reqwest-blocking"] }
nu-ansi-term = "0.50"
octocrab = { version = "0.40.0", features = ["stream"] }
regex = "1.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.39", features = ["rt-multi-thread"] }
