[package]
name = "git-task"
version = "0.2.4"
authors = ["jhspetersson <jhspetersson@gmail.com>"]
description = "Local-first task manager/bug tracker within your git repository which can sync issues with remote sources."
keywords = ["git", "task", "manager", "bug", "tracker"]
categories = ["command-line-utilities", "command-line-interface"]
documentation = "https://github.com/jhspetersson/git-task/blob/master/README.md"
homepage = "https://github.com/jhspetersson/git-task"
repository = "https://github.com/jhspetersson/git-task"
readme = "README.md"
license = "MIT"
edition = "2024"

[lib]
name = "gittask"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6", features = ["derive"] }
enable-ansi-support = "0.3.1"
evalexpr = "11"
futures-util = "0.3.32"
git2 = { version = "0.20.4", default-features = false }
gitlab = "0.1811.0"
graphql_client = { version = "0.16", features = ["reqwest-blocking"] }
jira_v3_openapi = {  version = "1.6", features = ["all"] }
nu-ansi-term = "0.50.3"
octocrab = { version = "0.50.0", features = ["stream"] }
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
redmine-api = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27"
tokio = { version = "1.51", features = ["rt-multi-thread"] }
